--- a/HireUP 2.0/web/Pages - Empresas/css/candidatura.css
+++ b/HireUP 2.0/web/Pages - Empresas/css/candidatura.css
@@ -2,6 +2,144 @@
     Created on : 23 May,2023, 18:13:29
     Author     : mutizo
 */
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
+* {
+	box-sizing: border-box;
+}
+
+
+body {
+	font-family: 'Muli', sans-serif;
+	display: flex;
+	/* align-items: center;
+	justify-content: center; */
+	flex-direction: column;
+	min-height: 100vh;
+	margin: 0;
+}
+
+.content {
+  display: flex;
+}
+
+.left{
+  margin-left: 100px !important;
+  width: 450px;
+  height: 100vh;
+ }
+
+.card {
+  max-width: 320px;
+  border-radius: 1rem;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff5f5dd;
+  padding: 1rem;
+  box-shadow: inset;
+}
+
+.infos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  grid-gap: 1rem;
+  gap: 1rem;
+}
+
+.info {
+  height: 7rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.name {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  color: black;
+}
+
+.function {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: #0AB248;
+}
+
+.stats {
+  width: 100%;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: rgba(0, 0, 0, 1);
+
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0 4px;
+}
+
+.state-value {
+  font-weight: 700;
+  color: #0AB248;
+}
+
+.request {
+  color: #0AB248;
+  margin-top: 1.5rem;
+  width: 100%;
+  border: 1px solid #0AB248;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.request:hover {
+  background-color: #0AB248;
+  color: #fff;
+}
+
 .card {
   width: 350px;
   background: white;
